--- a/index.html
+++ b/index.html
@@ -14,6 +14,30 @@
     <img src="files/dummy.jpg" width="1024" height="683" alt="Dummy Image">
     <figcaption>Caption</figcaption>
 </figure>
+<div class="container">
+
+    <div class="row row--wrap">
+        <div class="col col--four flex-1">
+            <div class="teaser">
+                <h3>Headline h3</h3>
+                <p>Some content here</p>
+            </div>
+        </div>
+        <div class="col col--four flex-1">
+            <div class="teaser">
+                <h3>Headline h3</h3>
+                <p>Some content here</p>
+            </div>
+        </div>
+        <div class="col col--four flex-1">
+            <div class="teaser">
+                <h3>Headline h3</h3>
+                <p>Some content here, Some content here, Some content here, Some content here</p>
+            </div>
+        </div>
+
+    </div>
+</div>
 
 <script src="assets/scripts/app.js" type="text/javascript"></script>
 
